changes in unitcontent

--- a/src/app/teacher/info-unit/info-unit.component.html
+++ b/src/app/teacher/info-unit/info-unit.component.html
@@ -8,7 +8,7 @@
       </mat-expansion-panel-header>
       <textarea class="exercise" matInput placeholder="Unidad: " [(ngModel)]="input">{{input}}</textarea>
       <mat-action-row>
-        <button mat-raised-button color="primary" (click)="save()" class="button-content">Guardar</button>
+        <button mat-raised-button color="primary" (click)="saveUnitContent()" class="button-content">Guardar</button>
       </mat-action-row>
     </mat-expansion-panel>
   </mat-accordion>
