--- a/src/app/teacher/video-unit/video-unit.component.css
+++ b/src/app/teacher/video-unit/video-unit.component.css
@@ -5,3 +5,19 @@
 :host.is-open {
   display: block;
 }
+
+.view-transparency {
+  display: flex;
+  height: 20em;
+  width: 22em;
+}
+
+.layout-alignment {
+  min-height: 10px;
+  padding-bottom: 10px;
+  display: block;
+}
+
+#url {
+  width: 25em;
+}
