--- a/src/app/teacher/exercise-unit/exercise-unit.component.html
+++ b/src/app/teacher/exercise-unit/exercise-unit.component.html
@@ -13,7 +13,7 @@
         </div>
         <div fxFlex>
           <mat-card class="view-exercise">
-           <!-- VISOR DE EJERCICIOS-->
+           <app-chat-exercise></app-chat-exercise>
           </mat-card>
         </div>
       </div>
