--- a/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.html
+++ b/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.html
@@ -1,1 +1,47 @@
-<span>chat</span>
+<blockquote class="chat">
+    <p class="them">
+    Annie, I'm going to be a lil late for the rehearsal, tonight.
+    </p>
+      
+    <p class="me">
+    S'Okay, Maude.  You know your lines...?
+    </p>
+    
+    <p class="them">
+    I know em, I don't know what order they         come in...
+    </p>
+    
+    <p class="me">
+    We'll work it out...
+    </p>
+    <p class="them">
+        Annie, I'm going to be a lil late for the rehearsal, tonight.
+        </p>
+          
+        <p class="me">
+        S'Okay, Maude.  You know your lines...?
+        </p>
+        
+        <p class="them">
+        I know em, I don't know what order they         come in...
+        </p>
+        
+        <p class="me">
+        We'll work it out...
+        </p>
+        <p class="them">
+            Annie, I'm going to be a lil late for the rehearsal, tonight.
+            </p>
+              
+            <p class="me">
+            S'Okay, Maude.  You know your lines...?
+            </p>
+            
+            <p class="them">
+            I know em, I don't know what order they         come in...
+            </p>
+            
+            <p class="me">
+            We'll work it out...
+            </p>
+    </blockquote>
