--- a/src/app/teacher/exercise-unit/chat-exercise/message-item/message-item.component.html
+++ b/src/app/teacher/exercise-unit/chat-exercise/message-item/message-item.component.html
@@ -1,5 +1,6 @@
 <blockquote class="chat">
-    <p class="teacher">
+    <p [ngClass]="teacher">
+        {{message.getRol()}}
         {{message.getText()}}
     </p>
 </blockquote>
