--- a/src/app/teacher/exercise-unit/chat-exercise/message-item/message-item.component.html
+++ b/src/app/teacher/exercise-unit/chat-exercise/message-item/message-item.component.html
@@ -1,6 +1,5 @@
 <blockquote class="chat">
-    <p [ngClass]="teacher">
-        {{message.getRol()}}
+    <p [ngClass]="message.getRol()">
         {{message.getText()}}
     </p>
 </blockquote>
