--- a/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.css
+++ b/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.css
@@ -1,21 +1,14 @@
-.enter-message{
-  padding:13px 0px;
-}
-.enter-message input{
-  border:none;
-  padding:10px 12px;
-  background:#d3d3d3;
-  width:260px;
-  border-radius:2px;
-}
-.enter-message a.send{
-  padding:10px 15px;
-  background:#6294c2;
-  border-radius:2px;
-  float:right;
+.chat {
+  margin-top: 5%;
+  max-height: 450px;
+  overflow-y: scroll;
 }
 
-.chat {
-    max-height: 450px;
-    overflow-y: scroll;
+.input {
+  margin-top: 3%;
+  text-align: center;
+}
+
+.mat-fab {
+  color: #ffffff;
 }
