--- a/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.css
+++ b/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.css
@@ -1,7 +1,11 @@
 .chat {
   margin-top: 5%;
-  max-height: 450px;
+  height: 100%;
+  max-height: 100%;
+  width: 100%;
   overflow-y: scroll;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .input {
