--- a/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.html
+++ b/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.html
@@ -1,4 +1,4 @@
-<div class="chat">
+<div #list class="chat" [scrollTop]="list.scrollHeight">
     <app-message *ngFor="let message of messages" [message]="message"></app-message>
 </div>
 <div class="input">
