--- a/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.html
+++ b/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.html
@@ -1,5 +1,5 @@
 <div #list class="chat" [scrollTop]="list.scrollHeight">
-    <app-message *ngFor="let message of messages" [message]="message"></app-message>
+    <app-message *ngFor="let message of messages.slice().reverse()" [message]="message"></app-message>
 </div>
 <div class="input">
     <mat-form-field class="example-form-field">
