changes in chat

--- a/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.html
+++ b/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.html
@@ -1,11 +1,11 @@
-<div #list class="chat" [scrollTop]="list.scrollHeight">
+<mat-card #list class="chat" [scrollTop]="list.scrollHeight">
     <app-message *ngFor="let message of messages.slice().reverse()" [message]="message"></app-message>
-</div>
-<div class="input">
+</mat-card>
+<mat-card class="input">
     <mat-form-field class="example-form-field">
         <input matInput #box type="text" placeholder="Escriba la respuesta" [(ngModel)]="text" (keyup.enter)="send(text)"/>
     </mat-form-field>
     <button mat-fab (click)="send(text)">
         <mat-icon>send</mat-icon>
     </button>
-</div>
+</mat-card>
