--- a/src/app/teacher/exercise-unit/exercise-unit.component.html
+++ b/src/app/teacher/exercise-unit/exercise-unit.component.html
@@ -12,9 +12,9 @@
           </mat-action-row>
         </div>
         <div fxFlex>
-          <mat-card class="view-exercise">
+          <div class="view-exercise-chat">
            <app-chat-exercise></app-chat-exercise>
-          </mat-card>
+          </div>
         </div>
       </div>
     </mat-tab>
