--- a/src/app/teacher/exercise-unit/chat-exercise/message/message.component.css
+++ b/src/app/teacher/exercise-unit/chat-exercise/message/message.component.css
@@ -15,6 +15,10 @@ body {
     clear: both;
     position: relative;
   }
+  img{
+    max-width: 75%;
+    max-height: 75%;
+  }
   p.teacher {
     float: left;
   }
