--- a/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.css
+++ b/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.css
@@ -1,16 +1,25 @@
 .chat {
   height: 100%;
-  width: 100%;
-  overflow-y: scroll;
+  overflow-x:hidden;
   display: flex;
   flex-direction: column-reverse;
 }
 
 .input {
   margin-top: 3%;
-  text-align: center;
+  padding: initial;
+  border-radius: 10px;
 }
 
 .mat-fab {
   color: #ffffff;
+}
+
+.infix {
+  width: 19em;
+  padding-left: 3%;
+}
+
+mat-icon {
+  color: #eeeeee;
 }
