--- a/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.html
+++ b/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.html
@@ -2,10 +2,10 @@
     <app-message *ngFor="let message of messages.slice().reverse()" [message]="message"></app-message>
 </mat-card>
 <mat-card class="input">
-    <mat-form-field class="example-form-field">
+    <mat-form-field class="infix">
         <input matInput #box type="text" placeholder="Escriba la respuesta" [(ngModel)]="text" (keyup.enter)="send(text)"/>
     </mat-form-field>
-    <button mat-fab (click)="send(text)">
+    <button mat-mini-fab (click)="send(text)">
         <mat-icon>send</mat-icon>
     </button>
 </mat-card>
