--- a/src/app/teacher/exercise-unit/exercise-unit.component.css
+++ b/src/app/teacher/exercise-unit/exercise-unit.component.css
@@ -9,15 +9,19 @@
 .view-exercise {
   display: flex;
   height: 34em;
-  width: 24em;
+  width: 20em;
 }
 .view-exercise-chat {
   display: flex;
-  height: 30em;
+  height: 29em;
   width: 24em;
 }
 .layout-alignment {
   min-height: 10px;
   padding-bottom: 10px;
   display: block;
+}
+#disabled-scroll {
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
