--- a/src/app/teacher/exercise-unit/exercise-unit.component.html
+++ b/src/app/teacher/exercise-unit/exercise-unit.component.html
@@ -2,7 +2,7 @@
   <mat-tab-group>
     <mat-tab label="Ejercicio">
       <div class="layout-alignment"></div>
-      <div fxLayout="row" fxLayoutGap="20px">
+      <div fxLayout="row" fxLayoutGap="20px" id="disabled-scroll">
         <div fxFlex>
           <mat-card>
             <textarea matInput placeholder="Exercise" class="view-exercise"></textarea>
