--- a/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.html
+++ b/src/app/teacher/exercise-unit/chat-exercise/chat-exercise.component.html
@@ -1,11 +1,11 @@
-<mat-card #list class="chat" [scrollTop]="list.scrollHeight">
+<mat-card #list class="chat">
     <app-message *ngFor="let message of messages.slice().reverse()" [message]="message"></app-message>
 </mat-card>
 <mat-card class="input">
     <mat-form-field class="infix">
-        <input matInput #box type="text" placeholder="Escriba la respuesta" [(ngModel)]="text" (keyup.enter)="send(text)"/>
+        <input matInput #box type="text" placeholder="Escriba la respuesta" [(ngModel)]="box.value" (keyup.enter)="send(box.value)"/>
     </mat-form-field>
-    <button mat-mini-fab (click)="send(text)">
+    <button mat-mini-fab (click)="send(box.value)">
         <mat-icon>send</mat-icon>
     </button>
 </mat-card>
