--- a/src/app/teacher/exercise-unit/exercise-unit.component.html
+++ b/src/app/teacher/exercise-unit/exercise-unit.component.html
@@ -5,10 +5,10 @@
       <div fxLayout="row" fxLayoutGap="20px" id="disabled-scroll">
         <div fxFlex>
           <mat-card>
-            <textarea matInput placeholder="Exercise" class="view-exercise"></textarea>
+            <textarea matInput placeholder="Exercise" [(ngModel)]="exerciseJSON" class="view-exercise"></textarea>
           </mat-card>
           <mat-action-row>
-            <button mat-raised-button color="primary" class="button-content">Guardar</button>
+            <button mat-raised-button color="primary" (click)="saveUnitContent()" class="button-content">Guardar</button>
           </mat-action-row>
         </div>
         <div fxFlex>
