--- a/src/app/student/iteracion/formation-dialog.component.html
+++ b/src/app/student/iteracion/formation-dialog.component.html
@@ -1,8 +1,12 @@
 <mat-card class="margin2pc">
-    {{formations}}
-        <h3>Contenido del itinerario</h3>
-        <mat-nav-list>
-            <a mat-list-item *ngFor="let formation of data.formations" (click)="openItineraryInfo(itinerary.getFormations())" > {{ formation.getName() }} </a>
-        </mat-nav-list>
-    </mat-card>
-    
+  <h3>Contenido del itinerario</h3>
+  <mat-nav-list>
+    <ul>
+      <li type=disc *ngFor="let session of data.sessions">{{session.getName()}}
+        <ul>
+          <li *ngFor="let lesson of data.lessons">{{lesson.getName()}}
+        </ul>
+      </li>
+    </ul>
+  </mat-nav-list>
+</mat-card>
