--- a/src/app/student/iteracion/formation-dialog.component.html
+++ b/src/app/student/iteracion/formation-dialog.component.html
@@ -2,7 +2,7 @@
   <h3>Contenido del itinerario</h3>
   <mat-nav-list>
     <ul>
-      <li type=disc *ngFor="let formation of data.formations">{{formation.getName()}}
+      <li type=circle *ngFor="let formation of data.formations">{{formation.getName()}}
       </li>
     </ul>
     <ul>
