--- a/src/app/student/iteracion/formation-dialog.component.html
+++ b/src/app/student/iteracion/formation-dialog.component.html
@@ -1,14 +1,13 @@
 <mat-card class="margin2pc">
-  <h3>Contenido del itinerario</h3>
+  <h3>Contenido del {{data.itineraty}}</h3>
   <mat-nav-list>
     <ul>
-      <li type=circle *ngFor="let formation of data.formations">{{formation.getName()}}
-      </li>
+      <li type=circle *ngFor="let formation of data.formations">It: {{formation.getName()}}</li>
     </ul>
     <ul>
       <li type=disc *ngFor="let session of data.sessions">{{session.getName()}}
         <ul>
-          <li *ngFor="let lesson of data.lessons">{{lesson.getName()}}
+          <li *ngFor="let lesson of data.lessons" >{{lesson.getName()}}
         </ul>
       </li>
     </ul>
