--- a/src/app/teacher/info-unit/info-unit.component.html
+++ b/src/app/teacher/info-unit/info-unit.component.html
@@ -31,16 +31,16 @@
             <button mat-raised-button color="primary" class="button-content" (click)="addLesson(i,j)">
               <mat-icon>add_circle_outline</mat-icon> Añadir lección</button>
           </mat-action-row>
-          <mat-card *ngFor="let lesson of session.getLessons()" id="card_lesson">
+          <mat-card *ngFor="let lesson of session.getLessons(); let k = index" id="card_lesson">
             <h4>{{lesson.getName()}}</h4>
             <mat-card-content>
               <mat-card id="card_cont_lesson">
-                <mat-card-content>
-
+                <mat-card-content *ngFor="let interaction of lesson.getInteractions()">
+                  <p>{{interaction.getText()}}</p>
                 </mat-card-content>
                 <mat-action-row>
-                  <button mat-raised-button color="primary" class="button-content" (click)="addVideo()">Añadir video</button>
-                  <button mat-raised-button color="primary" class="button-content" (click)="addExercise()">Añadir ejercicio</button>
+                  <button mat-raised-button color="primary" class="button-content" (click)="addVideo(i,j,k)">Añadir video</button>
+                  <button mat-raised-button color="primary" class="button-content" (click)="addExercise(i,j,k)">Añadir ejercicio</button>
                 </mat-action-row>
               </mat-card>
             </mat-card-content>
