--- a/src/app/teacher/info-unit/info-unit.component.html
+++ b/src/app/teacher/info-unit/info-unit.component.html
@@ -36,7 +36,7 @@
             <mat-card-content>
               <mat-card id="card_cont_lesson">
                 <mat-card-content *ngFor="let interaction of lesson.getInteractions()">
-                  <p>{{interaction.getText()}}</p>
+                  <a href="" (click)="addExercise(i,j,k)">{{interaction.getText()}}</a> 
                 </mat-card-content>
                 <mat-action-row>
                   <button mat-raised-button color="primary" class="button-content" (click)="addVideo(i,j,k)">Añadir video</button>
