--- a/src/app/teacher/video-unit/video-unit.component.html
+++ b/src/app/teacher/video-unit/video-unit.component.html
@@ -8,7 +8,7 @@
           </mat-form-field>
         </div>
         <div fxFlex id="visor-video">
-          <iframe width="300" height="200" [src]="videoURL" allowfullscreen></iframe>
+          <iframe width="300" height="200" [src]="getVideoURL()" allowfullscreen></iframe>
         </div>
       </div>
       <div class="layout-alignment"></div>
