--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -3,7 +3,7 @@
   <div fxFlex>
     <app-graph-unit #graphUnit (openUnit)="openUnit($event)"></app-graph-unit>
     <app-exercise-unit #exerciseUnit></app-exercise-unit>
-    <app-video-unit #videoUnit></app-video-unit>
+    <app-video-unit [infoUnitVideo] = "infoUnitVideo" #videoUnit></app-video-unit>
   </div>
   <div fxFlex>
     <app-info-unit *ngIf="unit" [exerciseUnit]="exerciseUnit" [graphUnit] = "graphUnit" [videoUnit]="videoUnit" [unit] = "unit"></app-info-unit>
