--- a/src/app/student/lesson/lesson.component.html
+++ b/src/app/student/lesson/lesson.component.html
@@ -1,10 +1,9 @@
 <mat-card class="margin2pc">
     <h3>Lección de {{lessonName}}</h3>
   <mat-horizontal-stepper #stepper>
-    <mat-step *ngFor="let type of interactionType">
-      <form *ngFor="let inye of interactions">
-        <ng-template matStepLabel >{{type}}</ng-template>
-        {{inye.getId()}}
+    <mat-step *ngFor="let interaction of interactions">
+      <form>
+        <ng-template matStepLabel >{{interaction.getText()}}</ng-template>
         <router-outlet></router-outlet>
         <div>
           <button mat-button matStepperPrevious>Regresar</button>
