--- a/src/app/teacher/info-unit/info-unit.component.html
+++ b/src/app/teacher/info-unit/info-unit.component.html
@@ -19,7 +19,8 @@
   </mat-expansion-panel-header>
   <mat-tab-group>
     <mat-tab *ngFor="let itinerary of itinerarys" label={{itinerary.getName()}}>
-      <app-session [itinerary]="itinerary"></app-session>
+      <app-session [graphUnitComponent]="graphUnitComponent" [exerciseUnitComponent]="exerciseUnitComponent"
+      [videoUnitComponent] = "videoUnitComponent" [itinerary]="itinerary"></app-session>
     </mat-tab>
     <mat-tab>
       <ng-template mat-tab-label>
