--- a/src/app/teacher/exercise-unit/exercise-unit.component.html
+++ b/src/app/teacher/exercise-unit/exercise-unit.component.html
@@ -8,7 +8,7 @@
             <textarea matInput placeholder="Exercise" [(ngModel)]="exerciseJSON" class="view-exercise"></textarea>
           </mat-card>
           <mat-action-row>
-            <button mat-raised-button color="primary" (click)="saveUnitContent()" class="button-content">Guardar</button>
+            <button mat-raised-button color="primary" (click)="saveExercise()" class="button-content">Guardar</button>
           </mat-action-row>
         </div>
         <div fxFlex>
