--- a/src/app/student/lesson/video/video.component.html
+++ b/src/app/student/lesson/video/video.component.html
@@ -1,6 +1,5 @@
 <mat-card class="margin2pc">
-    <h3>Vídeo:</h3>
-  <iframe width="420" height="315"
-          src="https://youtu.be/Hnj_EMDUfjY">
+  <iframe width="560" height="260"
+          [src]="displayURL">
   </iframe>
 </mat-card>
