--- a/src/app/student/lesson/video/video.component.html
+++ b/src/app/student/lesson/video/video.component.html
@@ -1,5 +1,3 @@
 <mat-card class="margin2pc">
-  <iframe width="560" height="260"
-          [src]="displayURL">
-  </iframe>
+  <iframe [src]="displayURL"></iframe>
 </mat-card>
