--- a/src/app/teacher/info-unit/info-unit.component.html
+++ b/src/app/teacher/info-unit/info-unit.component.html
@@ -17,7 +17,7 @@
       Itinerarios
     </mat-panel-title>
   </mat-expansion-panel-header>
-  <mat-tab-group>
+  <mat-tab-group  id="itinerary">
     <mat-tab *ngFor="let itinerary of itinerarys" label={{itinerary.getName()}}>
       <app-session [graphUnitComponent]="graphUnitComponent" [exerciseUnitComponent]="exerciseUnitComponent"
       [videoUnitComponent] = "videoUnitComponent" [itinerary]="itinerary" (openExerciseInfo)="openExerciseInfo($event)"
