--- a/src/app/teacher/info-unit/info-unit.component.html
+++ b/src/app/teacher/info-unit/info-unit.component.html
@@ -25,7 +25,7 @@
     </mat-tab>
     <mat-tab>
       <ng-template mat-tab-label>
-        <button *ngIf="itinerarys.length != 5" mat-raised-button color="primary" id="itinerary" (click)="addItinerary()">
+        <button *ngIf="itinerarys.length != 5" mat-raised-button color="primary" id="itinerary-button" (click)="addItinerary()">
           <mat-icon>add_circle_outline</mat-icon>
         </button>
       </ng-template>
