adding youtube url

--- a/src/app/teacher/video-unit/video-unit.component.html
+++ b/src/app/teacher/video-unit/video-unit.component.html
@@ -4,7 +4,7 @@
       <div fxLayout="row" fxLayoutGap="20px">
         <div fxFlex>
           <mat-form-field id="url">
-            <input matInput [(ngModel)]="videoURL" placeholder="url">
+            <input matInput [(ngModel)]="videoCode" placeholder="Inserte el código del video">
           </mat-form-field>
         </div>
         <div fxFlex id="visor-video">
