--- a/src/app/student/formation/formation.component.html
+++ b/src/app/student/formation/formation.component.html
@@ -5,15 +5,17 @@
         <b>{{itinerary.getName()}}</b>
       </mat-panel-title>
     </mat-expansion-panel-header>
+    <ul>
+      <li type=circle *ngFor="let formation of formations">It: {{formation.getName()}}</li>
+    </ul>
+    <ul>
+      <li type=disc *ngFor="let session of sessions">{{session.getName()}}
         <ul>
-          <li type=circle *ngFor="let formation of formations">It: {{formation.getName()}}</li>
-        </ul>
-        <ul>
-          <li type=disc *ngFor="let session of sessions">{{session.getName()}}
-            <ul>
-              <li *ngFor="let lesson of lessons" id="lesson"><a (click)="openLesson(lesson)">{{lesson.getName()}}</a></li>
-            </ul>
+          <li *ngFor="let lesson of lessons" id="lesson">
+            <a (click)="openLesson(lesson)">{{lesson.getName()}}</a>
           </li>
         </ul>
+      </li>
+    </ul>
   </mat-expansion-panel>
 </mat-accordion>
