--- a/src/app/student/lesson/interaction.component.html
+++ b/src/app/student/lesson/interaction.component.html
@@ -16,8 +16,8 @@
           <button  mat-raised-button matStepperPrevious color="primary">Regresar</button>
           <button  mat-raised-button matStepperNext color="primary">Siguiente</button>
         </div>
-        <app-video *ngIf="isVideo(interaction)" [video]="interaction"></app-video>
-        <app-chat-exercise *ngIf="isExercise(interaction)" [exercise]="interaction"></app-chat-exercise>
+        <app-video *ngIf="!interaction.isExercise()" [video]="interaction"></app-video>
+        <app-chat-exercise *ngIf="interaction.isExercise()" [exercise]="interaction"></app-chat-exercise>
       </form>
     </mat-step>
     <mat-step>
